config/cloudformation.template
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Parameters" : {
    "KeyName": {
      "Description" : "Name of an existing EC2 KeyPair to enable SSH access to the instance",
      "Type": "AWS::EC2::KeyPair::KeyName", 
	"Default": "stackato",
      "ConstraintDescription" : "must be the name of an existing EC2 KeyPair."
    },
    "Region": {
      "Description" : "Region to deploy stackato to",
      "Type" : "String",
      "Default" : "eu-central-1",
      "AllowedValues" : ["eu-central-1", "eu-west-1" ]
    },
    "NatInstanceType" : {
      "Description" : "Instance type of NAT hosts",
      "Type" : "String",
      "Default" : "m3.medium",
      "AllowedValues" : ["m3.medium"]
    },
    "BastionInstanceType" : {
      "Description" : "Instance type of Bastion hosts",
      "Type" : "String",
      "Default" : "t2.micro",
      "AllowedValues" : ["t2.micro"]
    },
    "StackatoInstanceType" : {
      "Description" : "Instance type of Stackato hosts",
      "Type" : "String",
      "Default" : "m3.medium",
      "AllowedValues" : ["m3.medium"]
    },
    "SSLCertificateId" : {
      "Description" : "SSL Certificate Id to be used for SSL traffic",
      "Type" : "String"
    }
  },

  "Mappings" : {
    "AvailabilityZones" : {
	"eu-west-1" 	: { "Zone1" : "eu-west-1a", "Zone2" : "eu-west-1b" },
	"eu-central-1" 	: { "Zone1" : "eu-central-1a", "Zone2" : "eu-central-1b" }
    },
    "AWSInstanceType2Arch" : {
      "t1.micro"    : { "Arch" : "PV64"   },
      "t2.micro"    : { "Arch" : "HVM64"  },
      "t2.small"    : { "Arch" : "HVM64"  },
      "t2.medium"   : { "Arch" : "HVM64"  },
      "m1.small"    : { "Arch" : "PV64"   },
      "m1.medium"   : { "Arch" : "PV64"   },
      "m1.large"    : { "Arch" : "PV64"   },
      "m1.xlarge"   : { "Arch" : "PV64"   },
      "m2.xlarge"   : { "Arch" : "PV64"   },
      "m2.2xlarge"  : { "Arch" : "PV64"   },
      "m2.4xlarge"  : { "Arch" : "PV64"   },
      "m3.medium"   : { "Arch" : "HVM64"  },
      "m3.large"    : { "Arch" : "HVM64"  },
      "m3.xlarge"   : { "Arch" : "HVM64"  },
      "m3.2xlarge"  : { "Arch" : "HVM64"  },
      "c1.medium"   : { "Arch" : "PV64"   },
      "c1.xlarge"   : { "Arch" : "PV64"   },
      "c3.large"    : { "Arch" : "HVM64"  },
      "c3.xlarge"   : { "Arch" : "HVM64"  },
      "c3.2xlarge"  : { "Arch" : "HVM64"  },
      "c3.4xlarge"  : { "Arch" : "HVM64"  },
      "c3.8xlarge"  : { "Arch" : "HVM64"  },
      "g2.2xlarge"  : { "Arch" : "HVMG2"  },
      "r3.large"    : { "Arch" : "HVM64"  },
      "r3.xlarge"   : { "Arch" : "HVM64"  },
      "r3.2xlarge"  : { "Arch" : "HVM64"  },
      "r3.4xlarge"  : { "Arch" : "HVM64"  },
      "r3.8xlarge"  : { "Arch" : "HVM64"  },
      "i2.xlarge"   : { "Arch" : "HVM64"  },
      "i2.2xlarge"  : { "Arch" : "HVM64"  },
      "i2.4xlarge"  : { "Arch" : "HVM64"  },
      "i2.8xlarge"  : { "Arch" : "HVM64"  },
      "hi1.4xlarge" : { "Arch" : "HVM64"  },
      "hs1.8xlarge" : { "Arch" : "HVM64"  },
      "cr1.8xlarge" : { "Arch" : "HVM64"  },
      "cc2.8xlarge" : { "Arch" : "HVM64"  }
    },

    "AWSRegionNatAMI" : {
      "eu-west-1"      : { "HVM64" : "ami-30913f47"},
      "eu-central-1"   : { "HVM64" : "ami-ac380eb1"}
    },

    "AWSRegionBastionAMI" : {
      "eu-west-1"      : { "HVM64" : "ami-6e7bd919"},
      "eu-central-1"   : { "HVM64" : "ami-b43503a9"}
    },
    "AWSRegionStackatoAMI" : {
      "eu-west-1"      : { "HVM64" : "ami-fb9b488c"},
      "eu-central-1"   : { "HVM64" : "ami-70eddb6d"}
    }
  },

  "Resources": {
    "StackatoVPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "InstanceTenancy": "default",
        "EnableDnsSupport": "true",
        "EnableDnsHostnames": "true",
        "Tags": [
          {
            "Key": "Name",
            "Value": "stackato-vpc"
          }
        ]
      }
    },
    "PublicSubnetAZ1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.1.0/24",
        "AvailabilityZone":   { "Fn::FindInMap" : [ "AvailabilityZones", { "Ref" : "Region" }, "Zone1" ] },
        "VpcId": {
          "Ref": "StackatoVPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "public-az-1"
          }
        ]
      }
    },
    "PublicSubnetAZ2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.2.0/24",
        "AvailabilityZone":   { "Fn::FindInMap" : [ "AvailabilityZones", { "Ref" : "Region" }, "Zone2" ] },
        "VpcId": {
          "Ref": "StackatoVPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "public-az-2"
          }
        ]
      }
    },
    "PrivateSubnetAZ1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.3.0/24",
        "AvailabilityZone":   { "Fn::FindInMap" : [ "AvailabilityZones", { "Ref" : "Region" }, "Zone1" ] },
        "VpcId": {
          "Ref": "StackatoVPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "private-az-1"
          }
        ]
      }
    },
    "PrivateSubnetAZ2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.4.0/24",
        "AvailabilityZone":   { "Fn::FindInMap" : [ "AvailabilityZones", { "Ref" : "Region" }, "Zone2" ] },
        "VpcId": {
          "Ref": "StackatoVPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "private-az-2"
          }
        ]
      }
    },
    "InternetGateway": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "stackato-igw"
          }
        ]
      }
    },
    "StackatoDHCP": {
      "Type": "AWS::EC2::DHCPOptions",
      "Properties": {
        "DomainName": "eu-west-1.compute.internal",
        "DomainNameServers": [
          "AmazonProvidedDNS"
        ]
      }
    },
    "StackatoNetworkACL": {
      "Type": "AWS::EC2::NetworkAcl",
      "Properties": {
        "VpcId": {
          "Ref": "StackatoVPC"
        }
      }
    },
    "stackatomaygo": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "StackatoVPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "stackato-main-route"
          }
        ]
      }
    },
    "StackatoPublicRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "StackatoVPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "public-az-1-route-table"
          }
        ]
      }
    },
    "StackatoPrivateRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "StackatoVPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "private-az-1-route-table"
          }
        ]
      }
    },
    "BastionHostAZ1ip": {
      "Type": "AWS::EC2::EIP",
      "DependsOn": [
        "Gateway1"
      ],
      "Properties": {
        "Domain": "vpc",
        "InstanceId": {
          "Ref": "BastionHostAZ1"
        }
      }
    },
    "BastionHostAZ2ip": {
      "Type": "AWS::EC2::EIP",
      "DependsOn": [
        "Gateway1"
      ],
      "Properties": {
        "Domain": "vpc",
        "InstanceId": {
          "Ref": "BastionHostAZ2"
        }
      }
    },
    "NATHostAZ2ip": {
      "Type": "AWS::EC2::EIP",
      "DependsOn": [
        "Gateway1"
      ],
      "Properties": {
        "Domain": "vpc",
        "InstanceId": {
          "Ref": "NATHostAZ2"
        }
      }
    },
    "NATHostAZ1ip": {
      "Type": "AWS::EC2::EIP",
      "DependsOn": [
        "Gateway1"
      ],
      "Properties": {
        "Domain": "vpc",
        "InstanceId": {
          "Ref": "NATHostAZ1"
        }
      }
    },
    "RouterLoadBalancer": {
      "Type": "AWS::ElasticLoadBalancing::LoadBalancer",
      "Properties": {
	"CrossZone" : true,
        "Subnets": [
          {
            "Ref": "PublicSubnetAZ1"
          },
          {
            "Ref": "PublicSubnetAZ2"
          }
        ],
        "HealthCheck": {
          "HealthyThreshold": "10",
          "Interval": "30",
          "Target": "TCP:80",
          "Timeout": "5",
          "UnhealthyThreshold": "2"
        },
        "Instances": [
          {
            "Ref": "StackatoRouterAZ1"
          },
          {
            "Ref": "StackatoRouterAZ2"
          }
        ],
        "SecurityGroups": [
          {
            "Ref": "LoadBalancerSecurityGroup"
          }
        ],
        "Listeners": [
          {
            "InstancePort": "80",
            "LoadBalancerPort": "80",
            "Protocol": "HTTP",
            "InstanceProtocol": "HTTP"
          },
          {
            "InstancePort": "80",
            "LoadBalancerPort": "443",
            "Protocol": "HTTPS",
            "InstanceProtocol": "HTTP",
            "SSLCertificateId": { "Ref" : "SSLCertificateId" },
            "PolicyNames": [
              "ELBSecurityPolicy-2014-10"
            ]
          }
        ]
      }
    },
    "NATHostAZ1": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "FALSE",
	"ImageId" : { "Fn::FindInMap" : [ "AWSRegionNatAMI", { "Ref" : "AWS::Region" },
                          { "Fn::FindInMap" : [ "AWSInstanceType2Arch", { "Ref" : "NatInstanceType" }, "Arch" ] } ] },
        "InstanceType": { "Ref" : "NatInstanceType" },
        "KeyName": { "Ref" : "KeyName" },
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": "xcloud-nat-az-1"
          }
        ],
        "NetworkInterfaces": [
          {
            "DeleteOnTermination": "true",
            "DeviceIndex": 0,
            "SubnetId": {
              "Ref": "PublicSubnetAZ1"
            },
            "PrivateIpAddresses": [
              {
                "PrivateIpAddress": "10.0.1.119",
                "Primary": "true"
              }
            ],
            "GroupSet": [
              {
                "Ref": "defaultSecurityGroup"
              }
            ]
          }
        ]
      }
    },
    "NATHostAZ2": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "FALSE",
	"ImageId" : { "Fn::FindInMap" : [ "AWSRegionNatAMI", { "Ref" : "AWS::Region" },
                          { "Fn::FindInMap" : [ "AWSInstanceType2Arch", { "Ref" : "NatInstanceType" }, "Arch" ] } ] },
        "InstanceType": { "Ref" : "NatInstanceType" },
        "KeyName": { "Ref" : "KeyName" },
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": "xcloud-nat-az-2"
          }
        ],
        "NetworkInterfaces": [
          {
            "DeleteOnTermination": "true",
            "Description": "Primary network interface",
            "DeviceIndex": 0,
            "SubnetId": {
              "Ref": "PublicSubnetAZ2"
            },
            "PrivateIpAddresses": [
              {
                "PrivateIpAddress": "10.0.2.58",
                "Primary": "true"
              }
            ],
            "GroupSet": [
              {
                "Ref": "defaultSecurityGroup"
              }
            ]
          }
        ]
      }
    },
    "BastionHostAZ1": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "FALSE",
	"ImageId" : { "Fn::FindInMap" : [ "AWSRegionBastionAMI", { "Ref" : "AWS::Region" },
                          { "Fn::FindInMap" : [ "AWSInstanceType2Arch", { "Ref" : "BastionInstanceType" }, "Arch" ] } ] },
        "InstanceType": { "Ref" : "BastionInstanceType" },
        "KeyName": { "Ref" : "KeyName" },
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": "Bastion-host-az1"
          }
        ],
        "NetworkInterfaces": [
          {
            "DeleteOnTermination": "true",
            "Description": "Primary network interface",
            "DeviceIndex": 0,
            "SubnetId": {
              "Ref": "PublicSubnetAZ1"
            },
            "PrivateIpAddresses": [
              {
                "PrivateIpAddress": "10.0.1.123",
                "Primary": "true"
              }
            ],
            "GroupSet": [
              {
                "Ref": "BastionSecurityGroup"
              }
            ]
          }
        ]
      }
    },
    "BastionHostAZ2": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "FALSE",
	"ImageId" : { "Fn::FindInMap" : [ "AWSRegionBastionAMI", { "Ref" : "AWS::Region" },
                          { "Fn::FindInMap" : [ "AWSInstanceType2Arch", { "Ref" : "BastionInstanceType" }, "Arch" ] } ] },
        "InstanceType": { "Ref" : "BastionInstanceType" },
        "KeyName": { "Ref" : "KeyName" },
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": "Bastion-host-az-2"
          }
        ],
        "NetworkInterfaces": [
          {
            "DeleteOnTermination": "true",
            "Description": "Primary network interface",
            "DeviceIndex": 0,
            "SubnetId": {
              "Ref": "PublicSubnetAZ2"
            },
            "PrivateIpAddresses": [
              {
                "PrivateIpAddress": "10.0.2.159",
                "Primary": "true"
              }
            ],
            "GroupSet": [
              {
                "Ref": "BastionSecurityGroup"
              }
            ]
          }
        ]
      }
    },
    "StackatoCloudControllerAZ1": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "FALSE",
	"ImageId" : { "Fn::FindInMap" : [ "AWSRegionStackatoAMI", { "Ref" : "AWS::Region" },
                          { "Fn::FindInMap" : [ "AWSInstanceType2Arch", { "Ref" : "StackatoInstanceType" }, "Arch" ] } ] },
        "InstanceType": { "Ref" : "StackatoInstanceType" },
        "KeyName": { "Ref" : "KeyName" },
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": "stackato-cc-az-1"
          }
        ],
        "NetworkInterfaces": [
          {
            "DeleteOnTermination": "true",
            "Description": "Primary network interface",
            "DeviceIndex": 0,
            "SubnetId": {
              "Ref": "PrivateSubnetAZ1"
            },
            "PrivateIpAddresses": [
              {
                "PrivateIpAddress": "10.0.3.5",
                "Primary": "true"
              }
            ],
            "GroupSet": [
              {
                "Ref": "defaultSecurityGroup"
              },
              {
                "Ref": "AllowSSHFromBastionSecurityGroup"
              }
            ]
          }
        ]
      }
    },
    "StackatoRouterAZ1": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "FALSE",
	"ImageId" : { "Fn::FindInMap" : [ "AWSRegionStackatoAMI", { "Ref" : "AWS::Region" },
                          { "Fn::FindInMap" : [ "AWSInstanceType2Arch", { "Ref" : "StackatoInstanceType" }, "Arch" ] } ] },
        "InstanceType": { "Ref" : "StackatoInstanceType" },
        "KeyName": { "Ref" : "KeyName" },
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": "stackato-router-az-1"
          }
        ],
        "NetworkInterfaces": [
          {
            "DeleteOnTermination": "true",
            "Description": "Primary network interface",
            "DeviceIndex": 0,
            "SubnetId": {
              "Ref": "PrivateSubnetAZ1"
            },
            "PrivateIpAddresses": [
              {
                "PrivateIpAddress": "10.0.3.6",
                "Primary": "true"
              }
            ],
            "GroupSet": [
              {
                "Ref": "defaultSecurityGroup"
              },
              {
                "Ref": "AllowSSHFromBastionSecurityGroup"
              },
              {
                "Ref": "AllowFromLoadBalancerSecurityGroup"
              }
            ]
          }
        ]
      }
    },
    "StackatoRouterAZ2": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "FALSE",
	"ImageId" : { "Fn::FindInMap" : [ "AWSRegionStackatoAMI", { "Ref" : "AWS::Region" },
                          { "Fn::FindInMap" : [ "AWSInstanceType2Arch", { "Ref" : "StackatoInstanceType" }, "Arch" ] } ] },
        "InstanceType": { "Ref" : "StackatoInstanceType" },
        "KeyName": { "Ref" : "KeyName" },
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": "stackato-router-az-2"
          }
        ],
        "NetworkInterfaces": [
          {
            "DeleteOnTermination": "true",
            "Description": "Primary network interface",
            "DeviceIndex": 0,
            "SubnetId": {
              "Ref": "PrivateSubnetAZ2"
            },
            "PrivateIpAddresses": [
              {
                "PrivateIpAddress": "10.0.4.6",
                "Primary": "true"
              }
            ],
            "GroupSet": [
              {
                "Ref": "defaultSecurityGroup"
              },
              {
                "Ref": "AllowSSHFromBastionSecurityGroup"
              },
              {
                "Ref": "AllowFromLoadBalancerSecurityGroup"
              }
            ]
          }
        ]
      }
    },
    "StackatoDeaAZ1": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "FALSE",
	"ImageId" : { "Fn::FindInMap" : [ "AWSRegionStackatoAMI", { "Ref" : "AWS::Region" },
                          { "Fn::FindInMap" : [ "AWSInstanceType2Arch", { "Ref" : "StackatoInstanceType" }, "Arch" ] } ] },
        "InstanceType": { "Ref" : "StackatoInstanceType" },
        "KeyName": { "Ref" : "KeyName" },
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": "stackato-dea-az-1"
          }
        ],
        "NetworkInterfaces": [
          {
            "DeleteOnTermination": "true",
            "Description": "Primary network interface",
            "DeviceIndex": 0,
            "SubnetId": {
              "Ref": "PrivateSubnetAZ1"
            },
            "PrivateIpAddresses": [
              {
                "PrivateIpAddress": "10.0.3.7",
                "Primary": "true"
              }
            ],
            "GroupSet": [
              {
                "Ref": "defaultSecurityGroup"
              },
              {
                "Ref": "AllowSSHFromBastionSecurityGroup"
              }
            ]
          }
        ]
      }
    },
    "StackatoDeaAZ2": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "FALSE",
	"ImageId" : { "Fn::FindInMap" : [ "AWSRegionStackatoAMI", { "Ref" : "AWS::Region" },
                          { "Fn::FindInMap" : [ "AWSInstanceType2Arch", { "Ref" : "StackatoInstanceType" }, "Arch" ] } ] },
        "InstanceType": { "Ref" : "StackatoInstanceType" },
        "KeyName": { "Ref" : "KeyName" },
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": "stackato-dea-az-2"
          }
        ],
        "NetworkInterfaces": [
          {
            "DeleteOnTermination": "true",
            "Description": "Primary network interface",
            "DeviceIndex": 0,
            "SubnetId": {
              "Ref": "PrivateSubnetAZ2"
            },
            "PrivateIpAddresses": [
              {
                "PrivateIpAddress": "10.0.4.7",
                "Primary": "true"
              }
            ],
            "GroupSet": [
              {
                "Ref": "defaultSecurityGroup"
              },
              {
                "Ref": "AllowSSHFromBastionSecurityGroup"
              }
            ]
          }
        ]
      }
    },
    "StackatoDeaAZ1": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "FALSE",
	"ImageId" : { "Fn::FindInMap" : [ "AWSRegionStackatoAMI", { "Ref" : "AWS::Region" },
                          { "Fn::FindInMap" : [ "AWSInstanceType2Arch", { "Ref" : "StackatoInstanceType" }, "Arch" ] } ] },
        "InstanceType": { "Ref" : "StackatoInstanceType" },
        "KeyName": { "Ref" : "KeyName" },
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": "stackato-service-az-1"
          }
        ],
        "NetworkInterfaces": [
          {
            "DeleteOnTermination": "true",
            "Description": "Primary network interface",
            "DeviceIndex": 0,
            "SubnetId": {
              "Ref": "PrivateSubnetAZ1"
            },
            "PrivateIpAddresses": [
              {
                "PrivateIpAddress": "10.0.3.8",
                "Primary": "true"
              }
            ],
            "GroupSet": [
              {
                "Ref": "defaultSecurityGroup"
              },
              {
                "Ref": "AllowSSHFromBastionSecurityGroup"
              }
            ]
          }
        ]
      }
    },
    "LoadBalancerSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "allows network connections from the public internet.",
        "VpcId": {
          "Ref": "StackatoVPC"
        },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "80",
            "ToPort": "80",
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "443",
            "ToPort": "443",
            "CidrIp": "0.0.0.0/0"
          }
        ],
        "SecurityGroupEgress": [
          {
            "IpProtocol": "-1",
            "CidrIp": "0.0.0.0/0"
          }
        ]
      }
    },
    "AllowFromLoadBalancerSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Allows inbound HTTP and HTTPS traffic",
        "VpcId": {
          "Ref": "StackatoVPC"
        },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "80",
            "ToPort": "80",
            "SourceSecurityGroupId": { "Ref": "LoadBalancerSecurityGroup" }
          }
        ],
        "SecurityGroupEgress": [
        ]
      }
    },
    "AllowSSHFromBastionSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "allow ssh access from the Bastion hosts",
        "VpcId": {
          "Ref": "StackatoVPC"
        },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "SourceSecurityGroupId": { "Ref": "BastionSecurityGroup" }
          }
        ],
        "SecurityGroupEgress": [
        ]
      }
    },
    "BastionSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Bastion host",
        "VpcId": {
          "Ref": "StackatoVPC"
        },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "icmp",
            "FromPort": "0",
            "ToPort": "-1",
            "CidrIp": "0.0.0.0/0"
          }
        ],
        "SecurityGroupEgress": [
          {
            "IpProtocol": "-1",
            "CidrIp": "0.0.0.0/0"
          }
        ]
      }
    },
    "defaultSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "default VPC security group",
        "VpcId": {
          "Ref": "StackatoVPC"
        },
        "SecurityGroupEgress": [
          {
            "IpProtocol": "-1",
            "CidrIp": "0.0.0.0/0"
          }
        ]
      }
    },
    "acl1": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Egress": true,
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "NetworkAclId": {
          "Ref": "StackatoNetworkACL"
        }
      }
    },
    "acl2": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "NetworkAclId": {
          "Ref": "StackatoNetworkACL"
        }
      }
    },
    "SubnetACL1": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "StackatoNetworkACL"
        },
        "SubnetId": {
          "Ref": "PrivateSubnetAZ1"
        }
      }
    },
    "SubnetACL2": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "StackatoNetworkACL"
        },
        "SubnetId": {
          "Ref": "PrivateSubnetAZ2"
        }
      }
    },
    "SubnetACL3": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "StackatoNetworkACL"
        },
        "SubnetId": {
          "Ref": "PublicSubnetAZ1"
        }
      }
    },
    "SubnetACL4": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "StackatoNetworkACL"
        },
        "SubnetId": {
          "Ref": "PublicSubnetAZ2"
        }
      }
    },
    "Gateway1": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "StackatoVPC"
        },
        "InternetGatewayId": {
          "Ref": "InternetGateway"
        }
      }
    },
    "SubnetRoute1": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "StackatoPublicRouteTable"
        },
        "SubnetId": {
          "Ref": "PublicSubnetAZ2"
        }
      }
    },
    "SubnetRoute2": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "StackatoPublicRouteTable"
        },
        "SubnetId": {
          "Ref": "PublicSubnetAZ1"
        }
      }
    },
    "Route1": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {
          "Ref": "StackatoPublicRouteTable"
        },
        "GatewayId": {
          "Ref": "InternetGateway"
        }
      },
      "DependsOn": "Gateway1"
    },
    "Route2": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {
          "Ref": "StackatoPrivateRouteTable"
        },
        "InstanceId": {
          "Ref": "NATHostAZ1"
        }
      }
    },
    "DCHPAssoc1": {
      "Type": "AWS::EC2::VPCDHCPOptionsAssociation",
      "Properties": {
        "VpcId": {
          "Ref": "StackatoVPC"
        },
        "DhcpOptionsId": {
          "Ref": "StackatoDHCP"
        }
      }
    },
    "ingress1": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "BastionSecurityGroup"
        },
        "IpProtocol": "tcp",
        "FromPort": "22",
        "ToPort": "22",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "ingress2": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "BastionSecurityGroup"
        },
        "IpProtocol": "icmp",
        "FromPort": "0",
        "ToPort": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "ingress3": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "defaultSecurityGroup"
        },
        "IpProtocol": "-1",
        "SourceSecurityGroupId": {
          "Ref": "defaultSecurityGroup"
        },
        "SourceSecurityGroupOwnerId": "233211978703"
      }
    },
    "egress1": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "BastionSecurityGroup"
        },
        "IpProtocol": "-1",
	"CidrIp" : "0.0.0.0/0"
      }
    },
    "egress2": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "defaultSecurityGroup"
        },
        "IpProtocol": "-1",
	"CidrIp" : "0.0.0.0/0"
      }
    }
  },
  "Description": "stackato high availability template"
}
